third_party/jerryscript/jerryscript/tests/jerry/fail/1/regression-test-issue-358.js
// SPDX-FileCopyrightText: 2016 Samsung Electronics Co., Ltd.
// SPDX-FileCopyrightText: 2016 University of Szeged.
// SPDX-License-Identifier: Apache-2.0

label_0: 
    if (false)
        do  {
            continue label_0;
        } while (false);